--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@google-cloud/logging": "^9.1.0",
     "@google-cloud/logging-winston": "^4.0.4",
     "@google-cloud/pubsub": "^2.10.0",
+    "@google-cloud/rcloadenv": "^2.0.3",
     "@google-cloud/storage": "^5.8.1",
     "@google/events": "^4.0.1",
     "@types/express": "^4.17.11",
