--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
     "strict": true,
-    "target": "es5",
-    "module": "es2015",
+    "target": "es2019",
+    "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitReturns": true,
-    "noImplicitAny": true,
+    "outDir": "./dist",
     "strictNullChecks": true,
-    "outDir": "dist",
-    "esModuleInterop": true,
+    "incremental": true,
+    "removeComments": true
   },
   "compileOnSave": true,
   "include": [
