--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,9 @@
 {
   "scripts": {
-    "compile": "tsc --project tsconfig.json",
-    "lint": "tslint --project tsconfig.json"
+    "lint": "tslint --project tslint.json",
+    "tsc": "tsc --project tsconfig.json",
+    "cp-package": "copyfiles package.json dist",
+    "build": "run-s lint tsc cp-package"
   },
   "repository": {
     "type": "git",
@@ -14,7 +16,10 @@
     "node": ">=14.0.0"
   },
   "description": "This is a TypeScript based Cloud Functions template.",
-  "dependencies": {},
+  "dependencies": {
+    "googleapis": "^67.1.1",
+    "express": "^4.17.1"
+  },
   "license": "MIT",
   "devDependencies": {
     "@google-cloud/functions-framework": "^1.7.1",
@@ -27,8 +32,8 @@
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.35",
     "@types/request": "^2.48.5",
-    "express": "^4.17.1",
-    "googleapis": "^67.1.1",
+    "copyfiles": "^2.4.1",
+    "npm-run-all": "^4.1.5",
     "request": "^2.88.2",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3",
